# lms_backend

./: .gitignore  README.md  manage.py  pyproject.toml
announcement/: admin.py  models.py  serializers.py  urls.py  views.py
announcement/migrations/: 0001_initial.py
base/: models.py  serializers.py
base/migrations/: 0001_initial.py  0002_announcement.py  0002_initial.py  0003_delete_batch.py  0003_delete_noticeboard.py  0003_noticeboard.py  0003_timetable.py
courses/: models.py
courses/migrations/: 0001_initial.py
edu_calendar/: apps.py  models.py  serializers.py  urls.py  views.py
edu_calendar/migrations/: 0001_initial.py  0002_initial.py
education_program/: asgi.py  settings.py  urls.py  views.py  wsgi.py
file/: models.py  views.py
file/migrations/: 0001_initial.py
homework/: admin.py  models.py  serializers.py  urls.py  views.py
homework/migrations/: 0001_initial.py  0002_initial.py  0002_register_due_date.py  0003_submission.py  (+4 more)
lecture/: models.py  serializers.py  urls.py  views.py
mypage/: serializers.py  urls.py  views.py
noticeboard/: models.py  serializers.py  urls.py  views.py
qna/: admin.py  models.py  serializers.py  urls.py  views.py
secure_entry/: admin.py  apps.py  models.py  serializer.py  serializers.py  tests.py  urls.py  views.py
subject/: admin.py  models.py  serializers.py  urls.py  views.py
sugang_register/: apps.py  models.py  serializers.py  urls.py  views.py
syllabus/: models.py  serializers.py  urls.py  views.py
team_connect/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+23 files in other folders)
